Fix for "Console log when scroll to end of log misses the bottom padding which make the texts overlap with the footer" #3062

--- a/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/stylesheets/new-theme.scss
@@ -2814,7 +2814,7 @@ pre, code, #admin-holder-for-admin-config-source-xml textarea {
 .buildoutput_pre {
   width:      100%;
   box-sizing: border-box;
-  padding:    10px;
+  padding:    10px 10px 40px 10px;
   min-height: calc(100vh - 480px);
 }
 
